--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
       padding: 2px 6px;
       border-radius: 4px;
     }
+
+    .telegram-btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 20px;
+      background: #1e4620;
+      color: #fff;
+      border-radius: 6px;
+      font-weight: bold;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -116,7 +127,7 @@
       <ul>
         <li><strong>500₽</strong> — простой документ / шаблон без адаптации</li>
         <li><strong>1000₽</strong> — с доработкой под вашу ситуацию и пояснениями</li>
-        <li><strong>1500₽</strong> — полный пакет: с адаптацией, правками и поддержкой</li>
+        <li><strong>1500₽</strong> — полный пакет: с адаптацией, правками</li>
       </ul>
     </div>
 
@@ -136,12 +147,23 @@
       <p><strong>WhatsApp:</strong> <a href="https://wa.me/79164653949">+7 916 465-39-49</a></p>
       <p><strong>Почта:</strong> <a href="mailto:krovlya97@yandex.ru">krovlya97@yandex.ru</a></p>
       <p><strong>Телефон:</strong> 8 (915) 469-39-93</p>
+
+      <a class="telegram-btn" href="https://t.me/DocExpress_24Bot" target="_blank">🟢 Оформить документ в Telegram</a>
     </div>
 
     <div class="footer">
       Надёжно, точно, в срок. Убедитесь сами.
     </div>
   </main>
+
+  <!-- Telegram Widget -->
+  <footer style="text-align:center; margin-top:40px;">
+    <script async src="https://telegram.org/js/telegram-widget.js?22"
+      data-telegram-login="DocExpress_24Bot"
+      data-size="large"
+      data-radius="8"
+      data-request-access="write"></script>
+  </footer>
 
 </body>
 </html>
