--- a/index.html
+++ b/index.html
@@ -78,28 +78,27 @@
       text-decoration: underline;
     }
 
+    .telegram-btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 20px;
+      background-color: #2e7d32;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+      transition: background-color 0.2s ease;
+    }
+
+    .telegram-btn:hover {
+      background-color: #1b5e20;
+    }
+
     .footer {
       text-align: center;
       margin-top: 40px;
       font-size: 15px;
       color: #777;
-    }
-
-    .highlight {
-      background-color: #dcedc8;
-      padding: 2px 6px;
-      border-radius: 4px;
-    }
-
-    .telegram-btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 12px 20px;
-      background: #1e4620;
-      color: #fff;
-      border-radius: 6px;
-      font-weight: bold;
-      text-decoration: none;
     }
   </style>
 </head>
@@ -127,7 +126,7 @@
       <ul>
         <li><strong>500₽</strong> — простой документ / шаблон без адаптации</li>
         <li><strong>1000₽</strong> — с доработкой под вашу ситуацию и пояснениями</li>
-        <li><strong>1500₽</strong> — полный пакет: с адаптацией, правками</li>
+        <li><strong>1500₽</strong> — полный пакет: с адаптацией, правками и поддержкой</li>
       </ul>
     </div>
 
@@ -148,7 +147,9 @@
       <p><strong>Почта:</strong> <a href="mailto:krovlya97@yandex.ru">krovlya97@yandex.ru</a></p>
       <p><strong>Телефон:</strong> 8 (915) 469-39-93</p>
 
-      <a class="telegram-btn" href="https://t.me/DocExpress_24Bot" target="_blank">🟢 Оформить документ в Telegram</a>
+      <a class="telegram-btn" href="https://t.me/DocExpress_24Bot" target="_blank">
+        ✍️ Отправить задачу боту и оформить документ
+      </a>
     </div>
 
     <div class="footer">
@@ -156,14 +157,6 @@
     </div>
   </main>
 
-  <!-- Telegram Widget -->
-  <footer style="text-align:center; margin-top:40px;">
-    <script async src="https://telegram.org/js/telegram-widget.js?22"
-      data-telegram-login="DocExpress_24Bot"
-      data-size="large"
-      data-radius="8"
-      data-request-access="write"></script>
-  </footer>
-
 </body>
 </html>
+
