--- a/index.html
+++ b/index.html
@@ -78,27 +78,29 @@
       text-decoration: underline;
     }
 
-    .telegram-btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 20px;
-      background-color: #2e7d32;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 5px;
-      transition: background-color 0.2s ease;
-    }
-
-    .telegram-btn:hover {
-      background-color: #1b5e20;
-    }
-
     .footer {
       text-align: center;
       margin-top: 40px;
       font-size: 15px;
       color: #777;
+    }
+
+    .telegram-btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 20px;
+      background-color: #1e4620;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+      font-size: 16px;
+      text-align: center;
+      transition: background-color 0.3s ease;
+    }
+
+    .telegram-btn:hover {
+      background-color: #145a24;
     }
   </style>
 </head>
@@ -126,7 +128,7 @@
       <ul>
         <li><strong>500₽</strong> — простой документ / шаблон без адаптации</li>
         <li><strong>1000₽</strong> — с доработкой под вашу ситуацию и пояснениями</li>
-        <li><strong>1500₽</strong> — полный пакет: с адаптацией, правками и поддержкой</li>
+        <li><strong>1500₽</strong> — полный пакет: с адаптацией, правками</li>
       </ul>
     </div>
 
@@ -148,7 +150,7 @@
       <p><strong>Телефон:</strong> 8 (915) 469-39-93</p>
 
       <a class="telegram-btn" href="https://t.me/DocExpress_24Bot" target="_blank">
-        ✍️ Отправить задачу боту и оформить документ
+        📩 Отправить задачу через Telegram-бота
       </a>
     </div>
 
@@ -159,4 +161,5 @@
 
 </body>
 </html>
+
 
