--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
       <p><strong>Телефон:</strong> 8 (915) 469-39-93</p>
 
       <a class="telegram-btn" href="https://t.me/DocExpress_24Bot" target="_blank">
-        📩 Отправить задачу через Telegram-бота
-      </a>
+  <span style="color: white;">📩 Отправить задачу через Telegram-бота</span>
+</a>
+
     </div>
 
     <div class="footer">
