--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
     <div class="contact">
       <h2>📞 Связь для оформления:</h2>
-      <p><strong>Telegram:</strong> <a href="https://t.me/AM14032022">@AM14032022</a></p>
-      <p><strong>WhatsApp:</strong> <a href="https://wa.me/79164653949">+7 916 465-39-49</a></p>
+      <p><strong>Telegram:</strong> <a href="https://t.me/DocExpress_24Bot">@DocExpress_24Bot</a></p>
+      <p><strong>WhatsApp:</strong> <a href="https://wa.me/79154693993">+7 915 469-39-93</a></p>
       <p><strong>Почта:</strong> <a href="mailto:krovlya97@yandex.ru">krovlya97@yandex.ru</a></p>
       <p><strong>Телефон:</strong> 8 (915) 469-39-93</p>
 
